lisan-al-gay remaining

--- a/Assignments.ipynb
+++ b/Assignments.ipynb
@@ -35,6 +35,9 @@
    "source": [
     "def F(n):\n",
     "    # Start coding\n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1, 2*n):\n",
+    "            \n",
     "    pass\n",
     "\n",
     "# Tests\n",
@@ -54,12 +57,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 1, 2\n",
+      "2, -1, 4\n",
+      "5, -4, 3\n",
+      "4, 2, 3\n",
+      "-8, 4, 2\n",
+      "6, -3, 4\n",
+      "7, 2, 1\n",
+      "5, 9, -10\n"
+     ]
+    }
+   ],
    "source": [
     "def F(d : dict):\n",
     "    # Start coding\n",
+    "    for i in d:\n",
+    "        print(i, d[i][0], d[i][1], sep=', ')\n",
     "    pass\n",
     "\n",
     "# Tests\n",
@@ -88,11 +108,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>roll_number</th>\n",
+       "      <th>department</th>\n",
+       "      <th>credit</th>\n",
+       "      <th>course_name</th>\n",
+       "      <th>course_type</th>\n",
+       "      <th>grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>588946</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>3</td>\n",
+       "      <td>EC250</td>\n",
+       "      <td>hasmed_elective</td>\n",
+       "      <td>AB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>145372</td>\n",
+       "      <td>EP</td>\n",
+       "      <td>4</td>\n",
+       "      <td>EP407</td>\n",
+       "      <td>hasmed_elective</td>\n",
+       "      <td>CC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>834515</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>8</td>\n",
+       "      <td>EP885</td>\n",
+       "      <td>hasmed_elective</td>\n",
+       "      <td>BB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>344265</td>\n",
+       "      <td>CSE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CSE699</td>\n",
+       "      <td>honours</td>\n",
+       "      <td>AB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>358405</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>3</td>\n",
+       "      <td>EE460</td>\n",
+       "      <td>minor</td>\n",
+       "      <td>AP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>781075</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CE540</td>\n",
+       "      <td>honours</td>\n",
+       "      <td>CC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>180828</td>\n",
+       "      <td>CSE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CE880</td>\n",
+       "      <td>minor</td>\n",
+       "      <td>AB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>981238</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CSE226</td>\n",
+       "      <td>minor</td>\n",
+       "      <td>AB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>836881</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>8</td>\n",
+       "      <td>MM530</td>\n",
+       "      <td>core</td>\n",
+       "      <td>AA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>310604</td>\n",
+       "      <td>EE</td>\n",
+       "      <td>8</td>\n",
+       "      <td>EE202</td>\n",
+       "      <td>core</td>\n",
+       "      <td>AB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   roll_number department  credit course_name      course_type grade\n",
+       "0       588946         MA       3       EC250  hasmed_elective    AB\n",
+       "1       145372         EP       4       EP407  hasmed_elective    CC\n",
+       "2       834515         MA       8       EP885  hasmed_elective    BB\n",
+       "3       344265        CSE       6      CSE699          honours    AB\n",
+       "4       358405         MA       3       EE460            minor    AP\n",
+       "5       781075         CE       8       CE540          honours    CC\n",
+       "6       180828        CSE       6       CE880            minor    AB\n",
+       "7       981238         MM       4      CSE226            minor    AB\n",
+       "8       836881         MM       8       MM530             core    AA\n",
+       "9       310604         EE       8       EE202             core    AB"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('student_records.csv')\n",
+    "df.head(10)"
    ]
   },
   {
@@ -105,11 +271,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "roll_number\n",
+       "124663    8.230000\n",
+       "138296    7.991228\n",
+       "143142    8.562963\n",
+       "143856    8.491803\n",
+       "144528    8.571429\n",
+       "            ...   \n",
+       "981238    8.275000\n",
+       "986057    7.925676\n",
+       "993835    8.424242\n",
+       "995208    7.590909\n",
+       "998293    8.560000\n",
+       "Length: 100, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "df_credit = df[df['course_type'] != 'honours']\n",
+    "df_credit = df_credit[df_credit['course_type'] != 'minor']\n",
+    "df_credit = df_credit[df_credit['course_type'] != 'alc']\n",
+    "\n",
+    "df_credit['grade_in_numbers'] = df_credit['grade'].map({'AP': 10, 'AA': 10, 'AB': 9, 'BB': 8, 'BC': 7, 'CC': 6, 'CD': 5, 'DD': 4})\n",
+    "df_credit['credit_times_grade'] = df_credit['credit'] * df_credit['grade_in_numbers']\n",
+    "display(df_credit.groupby('roll_number').sum()['credit_times_grade'] / df_credit.groupby('roll_number').sum()['credit'])"
    ]
   },
   {
@@ -122,11 +317,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([124663, 143142, 143856, 144528, 150503, 159438, 180828, 203200, 207443,\n",
+       "       214270, 265922, 282482, 283796, 294697, 310604, 327122, 362471, 379479,\n",
+       "       381227, 388969, 391848, 461971, 482623, 485484, 488661, 500658, 517837,\n",
+       "       521087, 534763, 571782, 572815, 581065, 581858, 588946, 608522, 608952,\n",
+       "       626000, 628849, 630568, 681499, 692318, 703403, 716985, 721490, 750259,\n",
+       "       773982, 781075, 782129, 787967, 810863, 834515, 836881, 845623, 871746,\n",
+       "       879634, 881983, 888886, 928288, 955757, 960395, 970791, 971123, 973158,\n",
+       "       981238, 986057, 998293],\n",
+       "      dtype='int64', name='roll_number')"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "df_credit_grouped = df_credit.groupby(['roll_number', 'course_type']).sum()['credit']\n",
+    "df_credit_grouped = df_credit_grouped.unstack().fillna(0)\n",
+    "df_credit_grouped[df_credit_grouped.eval(\"core >= 20 and department_elective >= 15 and felxible_elective >= 10 and hasmed_elective >= 5\")].index"
    ]
   },
   {
@@ -139,11 +356,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([124663, 138296, 143142, 143856, 144528, 145372, 150503, 159438, 180828,\n",
+      "       194063, 199713, 203200, 207443, 208100, 214270, 265922, 270007, 282482,\n",
+      "       283796, 294697, 301135, 310604, 327122, 329535, 344265, 358405, 362471,\n",
+      "       364146, 379479, 381227, 381526, 388969, 391848, 458200, 461584, 461971,\n",
+      "       465496, 478606, 482623, 485484, 488661, 500658, 517837, 521087, 534763,\n",
+      "       571782, 572815, 581065, 581858, 582912, 588946, 589528, 597353, 608522,\n",
+      "       608952, 613401, 626000, 628849, 630568, 680096, 681499, 692318, 703403,\n",
+      "       716985, 718510, 721490, 733782, 750259, 773982, 775967, 781075, 782129,\n",
+      "       787967, 788020, 810863, 816041, 834515, 836431, 836881, 841365, 845623,\n",
+      "       847809, 851029, 870642, 871746, 879634, 881983, 888886, 907454, 928288,\n",
+      "       955757, 960395, 970791, 971123, 973158, 981238, 986057, 993835, 995208,\n",
+      "       998293],\n",
+      "      dtype='int64', name='roll_number')\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "df_minor = df[df['course_type'] == 'minor']\n",
+    "df_grouped_minor = df_minor.groupby(['roll_number', 'department']).sum()['credit']\n",
+    "print(df_grouped_minor[df_grouped_minor >= 10].index.levels[0])"
    ]
   },
   {
@@ -156,11 +396,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([124663, 143142, 143856, 144528, 145372, 150503, 159438, 199713, 203200,\n",
+      "       207443, 208100, 214270, 265922, 282482, 283796, 294697, 310604, 327122,\n",
+      "       362471, 364146, 379479, 388969, 391848, 458200, 461971, 465496, 482623,\n",
+      "       485484, 488661, 500658, 517837, 521087, 534763, 571782, 572815, 581065,\n",
+      "       581858, 582912, 588946, 589528, 608522, 608952, 613401, 626000, 628849,\n",
+      "       630568, 681499, 692318, 703403, 716985, 718510, 721490, 750259, 773982,\n",
+      "       781075, 782129, 787967, 788020, 810863, 834515, 836881, 845623, 870642,\n",
+      "       871746, 879634, 881983, 888886, 928288, 955757, 960395, 970791, 971123,\n",
+      "       973158, 986057, 998293],\n",
+      "      dtype='int64', name='roll_number')\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "df_honours = df.groupby(['roll_number', 'course_type']).sum()['credit']\n",
+    "df_honours = df_honours.unstack()\n",
+    "df_honours['honours'] = df_honours['honours'].fillna(0)\n",
+    "df_honours['honours'] = df_honours['honours'].astype(int)\n",
+    "\n",
+    "print(df_honours[df_honours.eval(\"honours >= 10 and core >= 20\")].index)"
    ]
   },
   {
@@ -182,11 +445,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " message: Optimization terminated successfully\n",
+      " success: True\n",
+      "  status: 0\n",
+      "     fun: 7.345026153552391\n",
+      "       x: [ 2.349e-01 -9.285e-01]\n",
+      "     nit: 9\n",
+      "     jac: [-1.120e+01 -3.583e-01]\n",
+      "    nfev: 30\n",
+      "    njev: 9\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "import scipy\n",
+    "import numpy as np\n",
+    "\n",
+    "def f(vars):\n",
+    "\tx, y = vars\n",
+    "\treturn 2*(x - y - 3)**2 + 4*(x + 2*y + 1)**4\n",
+    "\n",
+    "def ineq1(vars):\n",
+    "\tx, y = vars\n",
+    "\treturn x - y + 3\n",
+    "\n",
+    "def ineq2(vars):\n",
+    "\tx, y = vars\n",
+    "\treturn 5 - (x + 2)**2 - (y + 1)**2\n",
+    "\n",
+    "con1 = {'type': 'ineq', 'fun': ineq1}\n",
+    "con2 = {'type': 'ineq', 'fun': ineq2}\n",
+    "\n",
+    "result = scipy.optimize.minimize(f, [1, 1], constraints=[con1, con2])\n",
+    "print(result)"
    ]
   },
   {
@@ -199,11 +498,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53.05363140385085\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "from scipy.integrate import quad\n",
+    "def f(x, y):\n",
+    "\treturn x**2 + y**4\n",
+    "\n",
+    "R = np.sqrt(3)\n",
+    "def integrand(theta):\n",
+    "\tx = R * np.cos(theta)\n",
+    "\ty = R * np.sin(theta)\n",
+    "\treturn f(x, y) * R\n",
+    "\n",
+    "result, error = quad(integrand, 0, 2*np.pi)\n",
+    "print(result)"
    ]
   },
   {
@@ -418,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
