--- a/Assignments.ipynb
+++ b/Assignments.ipynb
@@ -134,14 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "roll_number,department,credit,course_name,course_type,grade\n",
       "588946,MA,3,EC250,hasmed_elective,AB\n",
       "145372,EP,4,EP407,hasmed_elective,CC\n",
       "834515,MA,8,EP885,hasmed_elective,BB\n",
@@ -150,13 +149,15 @@
       "781075,CE,8,CE540,honours,CC\n",
       "180828,CSE,6,CE880,minor,AB\n",
       "981238,MM,4,CSE226,minor,AB\n",
-      "836881,MM,8,MM530,core,AA\n"
+      "836881,MM,8,MM530,core,AA\n",
+      "310604,EE,8,EE202,core,AB\n"
      ]
     }
    ],
    "source": [
     "#TODO\n",
     "with open('student_records.csv') as f:\n",
+    "\tf.readline()\n",
     "\tfor i in range(10):\n",
     "\t\tprint(f.readline().strip())\n"
    ]
